# curve25519-dalek-onchain

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
program/: Cargo.toml
program/src/: edwards.rs  entrypoint.rs  field.rs  instruction.rs  lib.rs  processor.rs  ristretto.rs  scalar.rs  window.rs
program/src/backend/serial/: mod.rs
program/src/backend/serial/scalar_mul/: mod.rs  straus.rs
program/src/backend/serial/u64/: constants.rs  field.rs  mod.rs  scalar.rs
program/tests/: instruction_count.rs
