[package]
name = "curve25519-dalek-onchain"
version = "0.0.1"
description = "Curve25519 Dalek library split into instructions to fit under compute limits"
authors = [
    "Lawrence Wu <larry.wu@solana.com>",
]
keywords = ["solana"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
digest = { version = "0.9", default-features = false }
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.15"
subtle = { version = "^2.2.1", default-features = false }
zeroize = { version = "1", default-features = false }
[target.'cfg(not(target_arch = "bpf"))'.dependencies]

rand_core = { version = "0.5", default-features = false }

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"
proptest = "0.10"
rand = "0.7"
curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
